--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 .DS_Store
 node_modules/
 dist/
-<<<<<<< HEAD
 npm-debug.log
-=======
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
->>>>>>> paginaInicial
+yarn-debug.log
+yarn-error.log
