--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^6.0.5",
     "uiv": "^0.11.4",
     "vue": "^2.3.3",
+    "vue-material": "^0.7.1",
     "vue-parallaxy": "^1.0.3",
     "vue-router": "^2.3.1",
     "vue-scroll": "^2.0.3"
