--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "chart.js": "^2.6.0",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
     "uiv": "^0.11.4",
     "vue": "^2.3.3",
     "vue-blu": "^0.1.9",
+    "vue-chartjs": "^2.6.5",
     "vue-fetch": "^0.4.0",
     "vue-infinite-loading": "^2.1.3",
     "vue-material": "^0.7.1",
