--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "meupolitico",
+  "name": "ospoliticos.com",
   "version": "1.0.0",
   "description": "Nossa intenção é concentrar e divulgar a informação útil acerca da atividade dos políticos para popularizar um estado de consciência política efetiva",
-  "author": "Cassio Cabral <cassioscabral@gmail.com>",
+  "contributors": [{
+    "name": "Cassio Cabral",
+    "email": "cassioscabral@gmail.com"
+  }],
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -11,21 +14,16 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.7",
     "chart.js": "^2.6.0",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
-    "uiv": "^0.11.4",
     "vue": "^2.3.3",
     "vue-blu": "^0.1.9",
     "vue-chartjs": "^2.6.5",
     "vue-fetch": "^0.4.0",
     "vue-infinite-loading": "^2.1.3",
-    "vue-material": "^0.7.1",
-    "vue-parallaxy": "^1.0.3",
-    "vue-router": "^2.3.1",
-    "vue-scroll": "^2.0.3"
+    "vue-router": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
