--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   },
   "dependencies": {
     "chart.js": "^2.6.0",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
+    "sass-loader": "^6.0.6",
     "vue": "^2.3.3",
-    "vue-blu": "^0.1.9",
     "vue-chartjs": "^2.6.5",
     "vue-fetch": "^0.4.0",
     "vue-infinite-loading": "^2.1.3",
+    "vue-parallaxy": "^1.0.3",
     "vue-router": "^2.3.1",
+    "vue-strap": "github:wffranco/vue-strap",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
@@ -37,9 +39,11 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
@@ -49,6 +53,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
+    "expose-loader": "^0.7.3",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
