--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "dependencies": {
     "chart.js": "^2.6.0",
+    "element-ui": "^1.4.0",
+    "fs": "^0.0.1-security",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "net": "^1.0.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "tls": "^0.0.1",
+    "twitter": "^1.7.1",
     "vue": "^2.3.3",
     "vue-chartjs": "^2.6.5",
     "vue-fetch": "^0.4.0",
@@ -35,6 +40,7 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-component": "^0.10.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
