--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.4",
     "net": "^1.0.2",
     "node-sass": "^4.5.3",
+    "numeral": "^2.0.6",
     "sass-loader": "^6.0.6",
     "tls": "^0.0.1",
     "twitter": "^1.7.1",
