--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^1.4.0",
     "fs": "^0.0.1-security",
     "jquery": "^3.2.1",
+    "localstoragedb": "^2.3.1",
     "lodash": "^4.17.4",
     "net": "^1.0.2",
     "node-sass": "^4.5.3",
