--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.2.1",
     "localstoragedb": "^2.3.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "net": "^1.0.2",
     "node-sass": "^4.5.3",
     "numeral": "^2.0.6",
